# api-besc-orders

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a6a89aaf97bd_add_base_columns.py  bde178a54c68_add_numero_pedido_column_to_pedidos.py  ef6469b06922_add_base_columns.py
app/: database.py  main.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: __init__.py  customers.py  orders.py  payments.py  products.py  proposals.py  shipments.py  taxs.py  tickets.py  user.py
app/models/status/: base.py  orders.py  proposals.py  shipment.py  tickets.py
app/models/taxes/: base.py  icms.py  ipi.py
app/routers/: auth.py  customers.py  orders.py  payments_date.py  products.py  proposals.py  shipments.py  taxes.py
app/schemas/: __init__.py  customers.py  orders.py  payments.py  products.py  proposals.py  shipments.py  taxs.py  tickets.py
app/schemas/auth/: user.py
app/schemas/status/: proposal.py  shipment.py  ticket.py
app/schemas/taxes/: icms.py  ipi.py
app/services/: customers.py  orders.py  payments.py  products.py  proposals.py  shipments.py  taxs.py  tickets.py  user_service.py
app/services/status/: orders.py
app/services/taxes/: icms.py  ipi.py
docs/SQLITE/: customer.sql  products.sql  users.sql
docs/SQLITE/order/: order.sql  status.sql
docs/SQLITE/proposals/: proposals.sql  status.sql
docs/SQLITE/shipments/: ship.sql  status.sql
docs/dash/: table_renomeada_status.sql
docs/postgres/: CREATE.SQL  DROP.SQL  STATUS.sql
(+7 files in other folders)
